--- a/roles/novaserver/handlers/main.yml
+++ b/roles/novaserver/handlers/main.yml
@@ -2,7 +2,9 @@
   service: name={{ item }} state=restarted enabled=yes
   loop:
     - nova-api
+    - nova-api-metadata
     - nova-scheduler
     - nova-conductor
-    - nova-novncproxy
+    - nova-spicehtml5proxy
+    - nova-serialproxy
 
