--- a/ansible-hosts-heat.yml
+++ b/ansible-hosts-heat.yml
@@ -3,28 +3,28 @@ all:
     controller-nodes:
       hosts:
         controller:
-          ansible_host: 192.168.99.101
-          ansible_ssh_private_key_file: .vagrant/machines/controller/libvirt/private_key
+          ansible_host: 172.22.200.58
+          ansible_ssh_user: debian
           external_ip: 192.168.98.101
           internal_ip: 192.168.99.101
     storage-nodes:
       hosts:
         controller:
-          ansible_host: 192.168.99.101
-          ansible_ssh_private_key_file: .vagrant/machines/controller/libvirt/private_key
+          ansible_host: 172.22.200.58
+          ansible_ssh_user: debian
           external_ip: 192.168.98.101
           internal_ip: 192.168.99.101
     network-nodes:
       hosts:
         controller:
-          ansible_host: 192.168.99.101
-          ansible_ssh_private_key_file: .vagrant/machines/controller/libvirt/private_key
+          ansible_host: 172.22.200.58
+          ansible_ssh_user: debian
           external_ip: 192.168.98.101
           internal_ip: 192.168.99.101
     compute-nodes:
       hosts:
         compute:
-          ansible_host: 192.168.99.102
-          ansible_ssh_private_key_file: .vagrant/machines/compute/libvirt/private_key
+          ansible_host: 172.22.200.156
+          ansible_ssh_user: debian
           external_ip: 192.168.98.102
           internal_ip: 192.168.99.102
