--- a/roles/cindervolume/tasks/main.yml
+++ b/roles/cindervolume/tasks/main.yml
@@ -24,7 +24,7 @@
     path: /etc/cinder/cinder.conf
     section: api_database
     option: connection
-    value: mysql+pymysql://cinder:{{ cinder_db_password }}@{{ internal_ip }}/cinder
+    value: mysql+pymysql://cinder:{{ cinder_db_password }}@{{ hostvars["controller"]["internal_ip"] }}/cinder
   notify: 
   - restart cinder-services
 
@@ -36,11 +36,11 @@
     value: "{{ item.value }}"
   loop:
     - { option: "transport_url",
-    value: 'rabbit://{{ rabbit_user }}:{{ rabbit_password }}@{{ internal_ip }}:5672/'}
+    value: 'rabbit://{{ rabbit_user }}:{{ rabbit_password }}@{{ hostvars["controller"]["internal_ip"] }}:5672/'}
     - { option: "my_ip", value: '{{ internal_ip }}' }
     - { option: "auth_strategy", value: keystone }
     - { option: "enabled_backends", value: lvm }
-    - { option: "glance_api_servers", value: 'http://{{ controller_fqdn }}:9292' }
+    - { option: "glance_api_servers", value: 'http://{{ hostvars["controller"]["internal_ip"] }}:9292' }
   notify: 
   - restart cinder-services
 
@@ -51,9 +51,9 @@
     option: "{{ item.option }}"
     value: "{{ item.value }}"
   loop:
-    - { option: "www_authenticate_uri", value: 'http://{{ controller_fqdn }}:5000' }
-    - { option: "auth_url", value: 'http://{{ controller_fqdn }}:5000' }
-    - { option: "memcached_servers", value: '{{ controller_fqdn }}:11211' }
+    - { option: "www_authenticate_uri", value: 'http://{{ hostvars["controller"]["internal_ip"] }}:5000' }
+    - { option: "auth_url", value: 'http://{{ hostvars["controller"]["internal_ip"] }}:5000' }
+    - { option: "memcached_servers", value: '{{ hostvars["controller"]["internal_ip"] }}:11211' }
     - { option: "auth_type", value: password }
     - { option: "project_domain_name", value: Default}
     - { option: "user_domain_name", value: Default}
