--- a/roles/neutron-agents-compute/tasks/main.yml
+++ b/roles/neutron-agents-compute/tasks/main.yml
@@ -13,6 +13,15 @@
     - { option: "auth_strategy", value: keystone }
   notify: 
   - restart neutron-services
+  
+- name: unset interface_driver option
+  ini_file:
+    path: /etc/neutron/neutron.conf
+    section: DEFAULT
+    option: "interface_driver"
+    state: absent
+  notify: 
+  - restart neutron-services
 
 - name: configure keystone_authtoken section
   ini_file:
@@ -21,9 +30,9 @@
     option: "{{ item.option }}"
     value: "{{ item.value }}"
   loop:
-    - { option: "www_authenticate_uri", value: 'http://{{ controller_fqdn }}:5000' }
-    - { option: "auth_url", value: 'http://{{ controller_fqdn }}:5000' }
-    - { option: "memcached_servers", value: '{{ controller_fqdn }}:11211' }
+    - { option: "www_authenticate_uri", value: 'http://{{ hostvars["controller"]["internal_ip"] }}:5000' }
+    - { option: "auth_url", value: 'http://{{ hostvars["controller"]["internal_ip"] }}:5000' }
+    - { option: "memcached_servers", value: '{{ hostvars["controller"]["internal_ip"] }}:11211' }
     - { option: "auth_type", value: password }
     - { option: "project_domain_name", value: Default}
     - { option: "user_domain_name", value: Default}
