--- a/roles/placement/tasks/main.yml
+++ b/roles/placement/tasks/main.yml
@@ -30,7 +30,9 @@
     - { option: "project_name", value: service}
     - { option: "username", value: placement}
     - { option: "password", value: "{{ placement_identity_password }}" }
-    - { option: "region", value: "{{ region }}" }    
+    - { option: "region", value: "{{ region }}" }
+    - { option: "region_name", value: "{{ region }}" }
+    - { option: "service_token_roles_required", value: true }
   notify:
   - restart apache2
 
