--- a/ansible-hosts-vagrant.yml
+++ b/ansible-hosts-vagrant.yml
@@ -1,6 +1,6 @@
 all:
   children:
-    controller-nodes:
+    controller_nodes:
       hosts:
         controller:
           ansible_host: 192.168.99.101
@@ -8,7 +8,7 @@ all:
           ansible_ssh_private_key_file: .vagrant/machines/controller/libvirt/private_key
           external_ip: 192.168.98.101
           internal_ip: 192.168.99.101
-    storage-nodes:
+    storage_nodes:
       hosts:
         controller:
           ansible_host: 192.168.99.101
@@ -16,7 +16,7 @@ all:
           ansible_ssh_private_key_file: .vagrant/machines/controller/libvirt/private_key
           external_ip: 192.168.98.101
           internal_ip: 192.168.99.101
-    network-nodes:
+    network_nodes:
       hosts:
         controller:
           ansible_host: 192.168.99.101
@@ -24,7 +24,7 @@ all:
           ansible_ssh_private_key_file: .vagrant/machines/controller/libvirt/private_key
           external_ip: 192.168.98.101
           internal_ip: 192.168.99.101
-    compute-nodes:
+    compute_nodes:
       hosts:
         compute:
           ansible_host: 192.168.99.102
