--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -1,53 +1,41 @@
 - name: Ensure apt info is updated
   apt: update_cache=yes
-  
-- name: Ensure sources.list file is properly defined
-  template: >
-    src=etc/apt/sources.list
-    dest=/etc/apt/sources.list
-    owner=root
-    group=root
-    mode=0644
+
+- name: Ensure gnupg is installed
+  apt:
+    pkg:
+    - gnupg
+    
+- name: Add openstack repository into sources list
+  ansible.builtin.apt_repository:
+    repo: 'deb http://osbpo.debian.net/osbpo bullseye-wallaby-backports main'
+    update_cache: no
+    state: present
+
+- name: Add openstack repository into sources list
+  ansible.builtin.apt_repository:
+    repo: 'deb http://osbpo.debian.net/osbpo bullseye-wallaby-backports-nochange main'
+    update_cache: no
+    state: present
+
 
 - name: Ensure osbpo GPG key is added
   apt_key: url=http://osbpo.debian.net/osbpo/dists/pubkey.gpg state=present
     
-# - name: Ensure apt-pinning is set properly (stable packages will be installed by default)
-#   copy: >
-#     src=etc/apt/preferences
-#     dest=/etc/apt/preferences
-#     owner=root
-#     group=root
-#     mode=0644
-  
+ 
 - name: Ensure system is updated and upgraded
   apt: update_cache=yes upgrade=yes
 
-- name: Ensure timezone is defined
-  when: timezone is defined
-  command: /usr/bin/timedatectl set-timezone {{ timezone }}
-  tags: timezone
-
-- name: Ensure ntp is enabled
-  command: /usr/bin/timedatectl set-ntp true
-  tags: ntp
-
-- name: Ensure timesyncd is enabled
-  service: name=systemd-timesyncd enabled=yes
-  tags: ntp
-  notify:
-  - restart timesyncd
-  
 - name: Ensure memcached is installed
-  apt: name={{ item }}
-  loop:
+  apt: 
+    pkg:
     - memcached
     - python3-memcache
     
-# - name: Ensure /etc/hosts is properly defined
-#   copy: >-
-#     src=etc/hosts
-#     dest=/etc/hosts
-#     owner=root
-#     group=root
-#     mode=0644
+
+
+
+
+
+
+
