--- a/roles/keystone_population/tasks/main.yml
+++ b/roles/keystone_population/tasks/main.yml
@@ -129,20 +129,20 @@
   command: openstack role add --project service --user cinder admin
   
 # Manila
-- name: verify if manila user has been created
-  environment: '{{k3}}'
-  command: /usr/bin/openstack user show manila
-  register: result
-  ignore_errors: True
-
-- name: ensure manila user is created
-  environment: '{{k3}}'
-  command: /usr/bin/openstack user create --domain default manila --password {{ manila_identity_password }}
-  when: result is failed
-
-- name: ensure admin role is added to manila user
-  environment: '{{k3}}'
-  command: openstack role add --project service --user manila admin
+#- name: verify if manila user has been created
+#  environment: '{{k3}}'
+#  command: /usr/bin/openstack user show manila
+#  register: result
+#  ignore_errors: True
+#
+#- name: ensure manila user is created
+#  environment: '{{k3}}'
+#  command: /usr/bin/openstack user create --domain default manila --password {{ manila_identity_password }}
+#  when: result is failed
+#
+#- name: ensure admin role is added to manila user
+#  environment: '{{k3}}'
+#  command: openstack role add --project service --user manila admin
   
 # Heat
 - name: ensure heat user is created
@@ -207,36 +207,36 @@
   when: result is failed
 
 # Trove
-- name: verify if trove user has been created
-  environment: '{{k3}}'
-  command: /usr/bin/openstack user show trove
-  register: result
-  ignore_errors: True
-
-- name: ensure trove user is created
-  environment: '{{k3}}'
-  command: /usr/bin/openstack user create --domain default trove --password {{ trove_identity_password }}
-  when: result is failed
-
-- name: ensure admin role is added to trove user
-  environment: '{{k3}}'
-  command: openstack role add --project service --user trove admin
+#- name: verify if trove user has been created
+#  environment: '{{k3}}'
+#  command: /usr/bin/openstack user show trove
+#  register: result
+#  ignore_errors: True
+#
+#- name: ensure trove user is created
+#  environment: '{{k3}}'
+#  command: /usr/bin/openstack user create --domain default trove --password {{ trove_identity_password }}
+#  when: result is failed
+#
+#- name: ensure admin role is added to trove user
+#  environment: '{{k3}}'
+#  command: openstack role add --project service --user trove admin
 
 # Magnum
-- name: verify is magnum user has been created
-  environment: '{{k3}}'
-  command: /usr/bin/openstack user show magnum
-  register: result
-  ignore_errors: True
-
-- name: ensure magnum user is created
-  environment: '{{k3}}'
-  command: /usr/bin/openstack user create --domain default magnum --password {{ magnum_identity_password }}
-  when: result is failed
-
-- name: ensure admin role is added to magnum user
-  environment: '{{k3}}'
-  command: openstack role add --project service --user magnum admin
+#- name: verify is magnum user has been created
+#  environment: '{{k3}}'
+#  command: /usr/bin/openstack user show magnum
+#  register: result
+#  ignore_errors: True
+#
+#- name: ensure magnum user is created
+#  environment: '{{k3}}'
+#  command: /usr/bin/openstack user create --domain default magnum --password {{ magnum_identity_password }}
+#  when: result is failed
+#
+#- name: ensure admin role is added to magnum user
+#  environment: '{{k3}}'
+#  command: openstack role add --project service --user magnum admin
 
 - name: ensure openrc admin file is created in root home directory
   template: >-
