--- a/site.yml
+++ b/site.yml
@@ -1,51 +1,53 @@
 ---
-
-- hosts: all
-  become: true
-  gather_facts: no
-  roles:
-    - role: common
-
-- hosts: controller_nodes
-  become: true
-  gather_facts: no
-  roles:
-   - role: dbserver
-
-- hosts: controller_nodes
-  become: true
-  gather_facts: no
-  roles:
-   - role: dbserver_population
-
-- hosts: controller_nodes
-  become: true
-  gather_facts: no
-  roles:
-   - role: rabbitserver
-
-
-- hosts: controller_nodes
-  become: true
-  gather_facts: no
-  roles:
-   - role: etcd
-
-- hosts: all
-  become: true
-  gather_facts: no
-  roles:
-    - role: openstackclient
 #
-#- hosts: controller-nodes
+#- hosts: all
+#  become: true
 #  gather_facts: no
 #  roles:
-#    - role: keystoneserver
-#      
-#- hosts: controller-nodes
+#    - role: common
+#
+#- hosts: controller_nodes
+#  become: true
 #  gather_facts: no
 #  roles:
-#    - role: keystone_population
+#   - role: dbserver
+#
+#- hosts: controller_nodes
+#  become: true
+#  gather_facts: no
+#  roles:
+#   - role: dbserver_population
+#
+#- hosts: controller_nodes
+#  become: true
+#  gather_facts: no
+#  roles:
+#   - role: rabbitserver
+#
+#
+#- hosts: controller_nodes
+#  become: true
+#  gather_facts: no
+#  roles:
+#   - role: etcd
+#
+#- hosts: all
+#  become: true
+#  gather_facts: no
+#  roles:
+#    - role: openstackclient
+
+- hosts: controller_nodes
+  become: true
+  gather_facts: no
+  roles:
+    - role: keystoneserver
+      
+- hosts: controller_nodes
+  become: true
+  gather_facts: no
+  roles:
+    - role: keystone_population
 #
 #- hosts: storage-nodes
 #  gather_facts: no
