--- a/site.yml
+++ b/site.yml
@@ -68,16 +68,17 @@
 #  roles: 
 #    - role: novaserver
 
-- hosts: compute_nodes
+#- hosts: compute_nodes
+#  become: true
+#  gather_facts: no
+#  roles:
+#    - role: novacompute
+#
+- hosts: controller-nodes
   become: true
   gather_facts: no
   roles:
-    - role: novacompute
-#
-#- hosts: controller-nodes
-#  gather_facts: no
-#  roles:
-#   - role: neutronserver
+   - role: neutronserver
 #
 #- hosts: compute-nodes
 #  gather_facts: no
