--- a/site.yml
+++ b/site.yml
@@ -81,16 +81,17 @@
 #   - role: neutronserver
 #
 
-- hosts: compute_nodes
+#- hosts: compute_nodes
+#  become: true
+#  gather_facts: no
+#  roles:
+#    - role: neutron-agents-compute
+#
+- hosts: controller_nodes
   become: true
   gather_facts: no
   roles:
-    - role: neutron-agents-compute
-#
-#- hosts: controller-nodes
-#  gather_facts: no
-#  roles:
-#    - role: horizon
+    - role: horizon
 #
 #- hosts: controller-nodes
 #  gather_facts: no
