--- a/site.yml
+++ b/site.yml
@@ -1,114 +1,109 @@
 ---
-#
-#- hosts: all
-#  become: true
-#  gather_facts: no
-#  roles:
-#    - role: common
-#
-#- hosts: controller_nodes
-#  become: true
-#  gather_facts: no
-#  roles:
-#   - role: dbserver
-#
-#- hosts: controller_nodes
-#  become: true
-#  gather_facts: no
-#  roles:
-#   - role: dbserver_population
-#
-#- hosts: controller_nodes
-#  become: true
-#  gather_facts: no
-#  roles:
-#   - role: rabbitserver
-#
-#
-#- hosts: controller_nodes
-#  become: true
-#  gather_facts: no
-#  roles:
-#   - role: etcd
-#
-#- hosts: all
-#  become: true
-#  gather_facts: no
-#  roles:
-#    - role: openstackclient
 
-#- hosts: controller_nodes
-#  become: true
-#  gather_facts: no
-#  roles:
-#    - role: keystoneserver
-#      
-#- hosts: controller_nodes
-#  become: true
-#  gather_facts: no
-#  roles:
-#    - role: keystone_population
-#
+- hosts: all
+  become: true
+  gather_facts: no
+  roles:
+    - role: common
+
+- hosts: controller_nodes
+  become: true
+  gather_facts: no
+  roles:
+   - role: dbserver
+
+- hosts: controller_nodes
+  become: true
+  gather_facts: no
+  roles:
+   - role: dbserver_population
+
+- hosts: controller_nodes
+  become: true
+  gather_facts: no
+  roles:
+   - role: rabbitserver
+
+
+- hosts: controller_nodes
+  become: true
+  gather_facts: no
+  roles:
+   - role: etcd
+
+- hosts: all
+  become: true
+  gather_facts: no
+  roles:
+    - role: openstackclient
+- hosts: controller_nodes
+  become: true
+  gather_facts: no
+  roles:
+    - role: keystoneserver
+      
+- hosts: controller_nodes
+  become: true
+  gather_facts: no
+  roles:
+    - role: keystone_population
+
 - hosts: storage_nodes
   become: true
   gather_facts: no
   roles: 
     - role: glanceserver
+- hosts: controller_nodes
+  become: true
+  gather_facts: no
+  roles: 
+    - role: placement
+- hosts: controller_nodes
+  become: true
+  gather_facts: no
+  roles: 
+    - role: novaserver
+- hosts: compute_nodes
+  become: true
+  gather_facts: no
+  roles:
+    - role: novacompute
+- hosts: controller_nodes
+  become: true
+  gather_facts: no
+  roles:
+   - role: neutronserver
 
+- hosts: compute_nodes
+  become: true
+  gather_facts: no
+  roles:
+    - role: neutron-agents-compute
 
-#- hosts: controller_nodes
-#  become: true
-#  gather_facts: no
-#  roles: 
-#    - role: placement
+- hosts: controller_nodes
+  become: true
+  gather_facts: no
+  roles:
+    - role: horizon
 
-#- hosts: controller_nodes
-#  become: true
-#  gather_facts: no
-#  roles: 
-#    - role: novaserver
+- hosts: controller_nodes
+  become: true
+  gather_facts: no
+  roles:
+    - role: cinderserver
 
-#- hosts: compute_nodes
-#  become: true
-#  gather_facts: no
-#  roles:
-#    - role: novacompute
+- hosts: storage_nodes
+  become: true
+  gather_facts: no
+  roles:
+    - role: cindervolume
 
-#- hosts: controller_nodes
-#  become: true
-#  gather_facts: no
-#  roles:
-#   - role: neutronserver
-#
-
-#- hosts: compute_nodes
-#  become: true
-#  gather_facts: no
-#  roles:
-#    - role: neutron-agents-compute
-#
-#- hosts: controller_nodes
-#  become: true
-#  gather_facts: no
-#  roles:
-#    - role: horizon
-#
-#- hosts: controller-nodes
-#  gather_facts: no
-#  roles:
-#    - role: cinderserver
-#
-#- hosts: storage-nodes
-#  gather_facts: no
-#  roles:
-#    - role: cindervolume
-#
 #- hosts: controller-nodes
 #  roles:
 #    - role: heatserver
 #
-#- hosts: controller-nodes
+#- hosts: controller_nodes
+#  become: true
 #  roles:
 #    - role: restart-services
-#
-#
+
