--- a/roles/keystoneserver/tasks/main.yml
+++ b/roles/keystoneserver/tasks/main.yml
@@ -1,3 +1,17 @@
+- name: ensure keystone database is present
+  mysql_db: name=keystone
+
+- name: ensure keystone database user is present
+  mysql_user:
+    name: keystone
+    host: "{{ item }}"
+    password: "{{ keystone_db_password }}"
+    priv: 'keystone.*:ALL'
+  loop:
+    - '%'
+    - localhost
+
+    
 - name: ensure keystone, apache2 and mod-wsgi-py3 packages are installed
   apt: name={{ item }}
   loop:
